# az-iot

./: .gitignore  README.md  code-review-2026-06-27.md  code-review-report.md  fix-summary.md  hardcoding-audit.md  protocol-expansion-summary.md
.github/workflows/: build-collector-linux.yml  build-collector-win.yml
docs/: 00-项目总纲.md  03-前端设计系统规范.md  README.md  开发总纲.md
docs/00-项目总纲/: AZ-IOT产品架构审计报告-20260628.md
docs/01-产品方案/: TH-802C点表批量导入.json  TH-802C设备型号录入操作指南.md  产品设计.md  菜单与交互逻辑重构方案.md
docs/02-技术架构/: AZ-IOT系统架构设计报告.md  MQTT安全模型.md  数据模型.md  架构决策记录.md  架构评估与长期规划.md
docs/03-开发规范/: 开发规范.md
docs/03-数据库/: AZ-IOT数据库设计文档.md
docs/04-前端设计/: 设计系统.md
docs/04-开发规范/: 数据库开发规范-XML-Mapper.md
docs/05-实施计划/: 代码审计报告-20260628.md
docs/06-服务端/: API清单.md
docs/07-采集端/: 采集端设计.md
docs/08-前端/: 前端架构.md
docs/plans/: 2026-06-26-p1-infrastructure.md
neuron-collector/: Cargo.toml  config.example.toml  config.toml
neuron-collector/.cargo/: config.toml
neuron-collector/collector-bin/: Cargo.toml
neuron-collector/collector-bin/src/: main.rs
neuron-collector/collector-config-sync/: Cargo.toml
neuron-collector/collector-config-sync/src/: lib.rs
neuron-collector/collector-debug/: Cargo.toml
neuron-collector/collector-debug/src/: display.rs  lib.rs  menu.rs  runner.rs
neuron-collector/collector-driver/: Cargo.toml
neuron-collector/collector-driver/src/: bacnet.rs  canbus.rs  dlt645.rs  dnp3.rs  ethernet_ip.rs  fins.rs  http_poll.rs  iec101.rs  iec104.rs  lib.rs  mitsubishi.rs  modbus.rs  mqtt_driver.rs  opcua.rs  profibus.rs  s7comm.rs  snmp.rs
neuron-collector/collector-model/: Cargo.toml
neuron-collector/collector-model/src/: lib.rs
neuron-collector/collector-reporter/: Cargo.toml
neuron-collector/collector-reporter/src/: lib.rs
neuron-collector/collector-scheduler/: Cargo.toml
neuron-collector/collector-scheduler/src/: lib.rs
neuron-collector/collector-storage/: Cargo.toml
neuron-collector/collector-storage/src/: lib.rs
neuron-collector/collector-telemetry/: Cargo.toml
neuron-collector/collector-telemetry/src/: lib.rs
neuron-collector/collector-uploader/: Cargo.toml
neuron-collector/collector-uploader/src/: lib.rs
neuron-platform/: .env.example  pom.xml
neuron-platform/neuron-common/: pom.xml
neuron-platform/neuron-common/src/main/java/com/aziot/common/dto/: ApiResponse.java  DevDeviceVO.java  DeviceModelVO.java  PageResult.java
neuron-platform/neuron-common/src/main/java/com/aziot/common/enums/: ProtocolType.java
neuron-platform/neuron-common/src/main/java/com/aziot/common/exception/: BusinessException.java
neuron-platform/neuron-controller/: pom.xml
neuron-platform/neuron-controller/src/main/java/com/aziot/controller/: AuthController.java  MqttAuthController.java
neuron-platform/neuron-controller/src/main/java/com/aziot/controller/collector/: CollectorController.java  SerialPortController.java
neuron-platform/neuron-controller/src/main/java/com/aziot/websocket/: RealtimeWebSocketHandler.java  WebSocketConfig.java
neuron-platform/neuron-dao/: pom.xml
neuron-platform/neuron-dao/src/main/resources/db/migration/: V1.1__init_sys_role.sql  V1.2__init_sys_permission.sql  V1.3__init_sys_user_role.sql  V1.4__init_sys_role_permission.sql  V1.5__init_sys_audit_log.sql  V10__init_sys_config.sql  V11__add_mqtt_auth_to_dev_collector.sql  V12__init_dev_device_alarm_config.sql  V13__init_dev_device_alarm_config.sql  V14__move_collect_interval_to_collector.sql  V15__init_dev_device_instruction.sql  V16__fix_device_status_and_protocol_codes.sql  V17__add_extra_params_to_register_map.sql  V18__fix_collector_status_type.sql  V19__device_nullable_serial_port.sql  V1__init_sys_user.sql  V2__init_dev_protocol.sql  V3__init_dev_manufacturer.sql  V4__init_dev_device_model.sql  V5__init_dev_register_map.sql  V6__init_dev_collector.sql  V7__init_dev_serial_port.sql  V8__init_dev_device.sql  V9__init_dev_device_reading.sql
neuron-platform/neuron-dao/src/main/resources/mapper/collector/: DevCollectorMapper.xml  DevSerialPortMapper.xml
neuron-platform/neuron-dao/src/main/resources/mapper/device/: DevDeviceAlarmConfigMapper.xml  DevDeviceInstructionMapper.xml  DevDeviceMapper.xml  DevDeviceModelMapper.xml  DevDeviceReadingMapper.xml  DevManufacturerMapper.xml  DevProtocolMapper.xml  DevRegisterMapMapper.xml
neuron-platform/neuron-dao/src/main/resources/mapper/system/: SysAuditLogMapper.xml  SysConfigMapper.xml  SysPermissionMapper.xml  SysRoleMapper.xml  SysUserMapper.xml
neuron-platform/neuron-mqtt/: pom.xml
neuron-platform/neuron-security/: pom.xml
neuron-platform/neuron-security/src/main/java/com/aziot/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java  LoginRateLimitFilter.java  SecurityConfig.java
neuron-platform/neuron-server/: pom.xml
neuron-platform/neuron-server/src/main/java/com/aziot/server/: NeuronServerApplication.java
neuron-platform/neuron-server/src/main/resources/: application-dev.yml  application.yml
neuron-platform/neuron-server/src/main/resources/db/migration/: V1__init_schema.sql
neuron-platform/neuron-service/: pom.xml
neuron-web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
neuron-web/src/: main.ts
neuron-web/src/api/: alarm-config.ts  auth.ts  collector.ts  dashboard.ts  device-instruction.ts  device-model.ts  device.ts  manufacturer.ts  protocol.ts  reading.ts  register-map.ts
neuron-web/src/components/: BusParamForm.vue  NextStepButton.vue
neuron-web/src/composables/: useRealtime.ts
neuron-web/src/router/: index.ts
neuron-web/src/stores/: auth.ts
neuron-web/src/styles/: element-override.css  global.css  tokens.css
neuron-web/src/types/: api.d.ts
neuron-web/src/utils/: request.ts
neuron-web/src/views/collector/: index.vue  list.vue
neuron-web/src/views/dashboard/: index.vue
neuron-web/src/views/device/: detail.vue  index.vue
neuron-web/src/views/device-model/: index.vue  registers.vue
neuron-web/src/views/layout/: index.vue
neuron-web/src/views/login/: index.vue
neuron-web/src/views/manufacturer/: index.vue
(+74 files in other folders)
