[workspace]
resolver = "2"
members = [
    "collector-model",
    "collector-driver",
    "collector-scheduler",
    "collector-config-sync",
    "collector-reporter",
    "collector-storage",
    "collector-telemetry",
    "collector-uploader",
    "collector-bin",
    "collector-debug",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-modbus = "0.13"
rumqttc = { version = "0.24", default-features = false, features=["use-native-tls"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
hex = "0.4"
crc = "3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
