[package]
name = "collector-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
collector-model = { path = "../collector-model" }
collector-scheduler = { path = "../collector-scheduler" }
collector-driver = { path = "../collector-driver" }
collector-reporter = { path = "../collector-reporter" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
