[package]
name = "collector-config-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
collector-model = { path = "../collector-model" }
collector-scheduler = { path = "../collector-scheduler" }
collector-uploader = { path = "../collector-uploader" }
collector-storage = { path = "../collector-storage" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
rumqttc = { workspace = true }
