[package]
name = "collector-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
collector-model = { path = "../collector-model" }
collector-uploader = { path = "../collector-uploader" }
