[package]
name = "collector-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
collector-model = { path = "../collector-model" }
collector-uploader = { path = "../collector-uploader" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
