[package]
name = "collector-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
rumqttc = { workspace = true }
collector-model = { path = "../collector-model" }
