[package]
name = "collector-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
collector-model = { path = "../collector-model" }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
rumqttc = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
